# visual-cuda-learn

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
cmake/: utils.cmake
csrc/: bindings.cpp  get_cuda_info.cpp
csrc/include/: kernels.h  tools.h  utils.h
csrc/kernels/: elementwise.cu  relu.cu  startup.cu
kernels/00_startup/: README.md  nsys_report.json  startup.cu  startup.py  trace.json
kernels/01_elementwise/: README.md  elementwise.cu  elementwise.py
kernels/cuda_info/: cuda_info  cuda_info.cpp  cuda_info.py
tests/ut/kernels/: conftest.py  relu.py
vcl/: hello_world.py
