[build-system]
requires = ["scikit-build-core>=0.5.0", "pybind11", "torch"]
build-backend = "scikit_build_core.build"

[project]
name = "vcl"
version = "0.1.0"
requires-python = ">=3.8"
description = "Demo project with CUDA kernels and Torch ops"
authors = [{ name = "LIU-ZVen", email = "zliudr@connect.ust.hk" }]
dependencies = ["torch", "pybind11", "scikit-build-core"]

[tool.scikit-build]
wheel.py-api = "cp310"         # 或自动：可以去掉，自动探测
cmake.minimum-version = "3.26"
cmake.verbose = false

cmake.targets = ["vcl_C"]

sdist.include = ["vcl/**/*", "csrc/**/*", "CMakeLists.txt"]
